--- a/activemq-consumer/src/main/resources/mq.properties
+++ b/activemq-consumer/src/main/resources/mq.properties
@@ -27,3 +27,6 @@ projectSampleMideaQueue=panfeng.mq.mail.projectSampleMidea
 projectAcceptConfirmQueue=panfeng.mq.mail.projectAcceptConfirm
 #发送项目验收函
 projectAcceptLetterQueue=panfeng.mq.mail.projectAcceptLetter
+
+#添加留言回复邮件通知
+topicReplyInformEmailQueue=panfeng.mq.mail.topicReply
