--- a/activemq-consumer/src/main/resources/mq.properties
+++ b/activemq-consumer/src/main/resources/mq.properties
@@ -27,6 +27,8 @@ projectSampleMideaQueue=panfeng.mq.mail.projectSampleMidea
 projectAcceptConfirmQueue=panfeng.mq.mail.projectAcceptConfirm
 #发送项目验收函
 projectAcceptLetterQueue=panfeng.mq.mail.projectAcceptLetter
+#发送通知给监制
+emailInformationQueue=panfeng.mq.mail.emailInformation
 
 #添加留言回复邮件通知
 topicReplyInformEmailQueue=panfeng.mq.mail.topicReply
