--- a/activemq-consumer/src/main/resources/mq.properties
+++ b/activemq-consumer/src/main/resources/mq.properties
@@ -5,30 +5,30 @@ mq.password=PfYw@4now
 mq.pool.maxConnections=10
 
 #邮件队列
-mailQueue=panfeng.mq.mail
+mailQueue=panfeng.mq.mail1
 #短信队列
-smsQueue=panfeng.mq.sms.register
+smsQueue=panfeng.mq.sms.register1
 #日志队列
-logQueue=panfeng.mq.log
+logQueue=panfeng.mq.log1
 #文件转化队列
-fileConverQueue=panfeng.mq.file
+#fileConverQueue=panfeng.mq.file
 
 #发送项目确认启动函
-projectConfirmStartQueue=panfeng.mq.mail.projectConfirmStart
+projectConfirmStartQueue=panfeng.mq.mail.projectConfirmStart1
 #策划启动函
-projectPlanStartQueue=panfeng.mq.mail.projectPlanStart
+projectPlanStartQueue=panfeng.mq.mail.projectPlanStart1
 #项目告知函
-projectInfoLetterQueue=panfeng.mq.mail.projectInfoLetter
+projectInfoLetterQueue=panfeng.mq.mail.projectInfoLetter1
 #发送项目制作启动函
-projectProductStartQueue=panfeng.mq.mail.projectProduct
+projectProductStartQueue=panfeng.mq.mail.projectProduct1
 #发送项目样片修改意见
-projectSampleMideaQueue=panfeng.mq.mail.projectSampleMidea
+projectSampleMideaQueue=panfeng.mq.mail.projectSampleMidea1
 #发送项目验收确认函
-projectAcceptConfirmQueue=panfeng.mq.mail.projectAcceptConfirm
+projectAcceptConfirmQueue=panfeng.mq.mail.projectAcceptConfirm1
 #发送项目验收函
-projectAcceptLetterQueue=panfeng.mq.mail.projectAcceptLetter
+projectAcceptLetterQueue=panfeng.mq.mail.projectAcceptLetter1
 #发送通知给监制
-emailInformationQueue=panfeng.mq.mail.emailInformation
+emailInformationQueue=panfeng.mq.mail.emailInformation1
 
 #添加留言回复邮件通知
-topicReplyInformEmailQueue=panfeng.mq.mail.topicReply
+topicReplyInformEmailQueue=panfeng.mq.mail.topicReply1
