--- a/activemq-consumer/src/main/resources/fdfs/fdfs_storage.conf
+++ b/activemq-consumer/src/main/resources/fdfs/fdfs_storage.conf
@@ -1,5 +1,3 @@
-storage_server=123.59.86.252,123.59.86.252
-#storage_server=10.10.112.236,106.75.77.52
-#storage_server=10.10.102.78,106.75.77.53
-#storage_server=10.10.108.108,106.75.14.48
-#storage_server=10.10.109.184,106.75.14.109
+#storage_server=106.75.105.232,test.apaipian.com:8000
+storage_server=10.10.102.78,fileb.apaipian.com
+storage_server=10.10.109.184,filed.apaipian.com
