--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<org.springframework.version>4.3.4.RELEASE</org.springframework.version>
 
 		<activemq-consumer.version>1.0-SNAPSHOT</activemq-consumer.version>
+		<activemq-video.version>1.0-SNAPSHOT</activemq-video.version>
 	</properties>
 
 	<dependencyManagement>
@@ -31,6 +32,11 @@
 				<artifactId>pat-common</artifactId>
 				<version>1.0-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+			<groupId>com.paipianwang.pat</groupId>
+			<artifactId>pat-common-web</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 			<dependency>
 				<groupId>com.paipianwang.pat</groupId>
 				<artifactId>pat-facade-product</artifactId>
@@ -305,5 +311,6 @@
 
 	<modules>
 		<module>activemq-consumer</module>
+		<module>activemq-video</module>
 	</modules>
 </project>
